Chore: Endpoint findAll to product refactored and endpoint findById lazy loading eliminated with method findByIdWithCategories in JPQL